@@ -13,6 +13,8 @@ ikiwiki (3.20130519) UNRELEASED; urgency=low
     (smcv)
   * openid: Automatically upgrade openid_realm to https when
     accessed via https.
+  * The ip() pagespec can now contain glob characters to match eg, a subnet
+    full of spammers.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 23 Jun 2013 14:02:01 -0400
 
